Fixed index's banner height on mobile

--- a/index.css
+++ b/index.css
@@ -11,13 +11,14 @@ main {
   background-image: url(./assets/img/grid.png);
   background-repeat: repeat;
   width: 100%;
-  height: 100%;
-  padding-top: 10%;
+  min-height: 100%;
+  padding: 10% 0;
 }
 
 .welcome > blockquote {
   font-family: 'Indie Flower', cursive;
   font-size: 3em;
+  margin: 0;
 }
 
 .col-md-4 > h1 {
